feat: improve language setting UI and implement real-time refresh

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
       }
     ],
     "configuration": {
-      "title": "AGQ",
+      "title": "Antigravity Quota",
       "properties": {
         "agq.enabled": {
           "type": "boolean",
